...
            android:layout_width="@dimen/nine_icon_size"
            android:layout_height="@dimen/nine_icon_size"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:scaleType="centerInside" />
        <View
            android:id="@+id/borderView"
            android:layout_width="@dimen/nine_icon_size"
            android:layout_height="@dimen/nine_icon_size"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_drawable_nocolor_3by3"/>
    </FrameLayout>
    <TextView
        android:id="@+id/te1"
        android:layout_width="@dimen/nine_icon_textview_width"
        android:layout_height="wrap_content"
        android:text="festivals &amp; hodidays"
        android:gravity="center"
        android:textSize="@dimen/nine_icon_textview_textsize"
        android:textAlignment="center"/>
...
